<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/FillContainer.SuperInnerBarrier"
    tools:showIn="@layout/activity_logic_gate">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_dropdown"
        style="@style/ConstraintContainer.OutlinedDropdownMenuStyles.GateThemes"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@id/image_simulation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <AutoCompleteTextView
            android:id="@+id/auto_tv_gates"
            style="@style/FillContainer.InputType.NONE"
            android:hint="@string/hint_gate_list"
            android:text="@string/sample_and_gates"
            android:textColor="?attr/autocompleteColor" />

    </com.google.android.material.textfield.TextInputLayout>

    <ImageButton
        android:id="@+id/image_simulation"
        style="@style/HugContent.OuterBarrier.ONLY_START.WideInnerBarrier"
        android:contentDescription="@string/cd_start_simulation"
        android:src="@drawable/ic_play"
        app:layout_constraintBottom_toBottomOf="@id/til_dropdown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/til_dropdown"
        app:layout_constraintTop_toTopOf="@id/til_dropdown" />

    <TextView
        android:id="@+id/tv_gate_inp1"
        style="@style/HugContent.BackgroundGateInput"
        android:text="@integer/low"
        android:theme="@style/TextPrimary.ColorPrimary.Heading2.Centered.Thickness.Clickable.SingleText"
        android:translationX="@dimen/smallBarrierValue"
        android:translationY="@dimen/densityMin25"
        app:layout_constraintBottom_toBottomOf="@+id/image_gate"
        app:layout_constraintStart_toStartOf="@id/image_gate"
        app:layout_constraintTop_toTopOf="@id/image_gate" />

    <TextView
        android:id="@+id/tv_gate_inp2"
        style="@style/HugContent.BackgroundGateInput"
        android:text="@integer/low"
        android:theme="@style/TextPrimary.ColorPrimary.Heading2.Centered.Thickness.Clickable.SingleText"
        android:translationX="@dimen/smallBarrierValue"
        android:translationY="@dimen/normalIconSize"
        app:layout_constraintBottom_toBottomOf="@id/image_gate"
        app:layout_constraintStart_toStartOf="@id/image_gate"
        app:layout_constraintTop_toTopOf="@id/image_gate" />

    <ImageView
        android:id="@+id/image_gate"
        style="@style/HugContent"
        android:contentDescription="@string/cd_gate_icon"
        android:src="@drawable/ic_and_inp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/line_gate_output"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_dropdown" />

    <View
        android:id="@+id/line_gate_output"
        style="@style/ConstraintContainer.PrimaryColoredHorizontalLine"
        app:layout_constraintBottom_toBottomOf="@id/image_output"
        app:layout_constraintEnd_toStartOf="@id/image_output"
        app:layout_constraintStart_toEndOf="@id/image_gate"
        app:layout_constraintTop_toTopOf="@id/image_output" />

    <ImageView
        android:id="@+id/image_output"
        style="@style/IconSize_Dim40"
        android:contentDescription="@string/cd_lamp"
        android:src="@drawable/ic_lamp_off"
        app:layout_constraintBottom_toBottomOf="@id/image_gate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/line_gate_output"
        app:layout_constraintTop_toTopOf="@id/image_gate" />

</androidx.constraintlayout.widget.ConstraintLayout>
