<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/FillContainer.FillViewPort"
    tools:context=".views.features.logate.LogicGateActivity">

    <include
        android:id="@+id/inc_layout_logate"
        style="@style/FillContainer"
        layout="@layout/layout_logic_gate" />

</androidx.core.widget.NestedScrollView>
