...
    <string name="kmap_two_variables_exp11">11</string>
    <string name="kmap_two_variables_exp10">10</string>
    <string name="kmap_answer_not_defined">N/D</string>
    <string name="kmap_variables">%d Variables</string>

    <string name="stop_condition">Simulation has stopped</string>
    <string name="play_condition">Simulation has started</string>

    <!-- NOTE: Please do not changed this code, it may cause an Exception -->
    <!-- [START] dropdown array strings -->
    <string name="auto_complete_tv_default_mode">Binary \u21C4 Binary-Coded Decimal</string>
    <string-array name="code_system_mode">
        <item>Binary \u21C4 Binary-Coded Decimal</item>
...
